--- a/style.scss
+++ b/style.scss
@@ -37,6 +37,10 @@ body {
     pointer-events: none;
   }
 }
+.container {
+  position: relative;
+}
+
 .tip__control-inputwrapper {
   position: relative;
 }
@@ -66,12 +70,15 @@ input {
 .tip-title {
   text-transform: uppercase;
   position: absolute;
+  transform: translateX(-50%);
+  left: 50%;
+  top: -76px;
 }
 .tip-calculator {
   min-height: 480px;
   background-color: $White;
   width: 920px;
-  margin-top: 80px;
+  margin-top: 65px;
   border-radius: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -111,6 +118,20 @@ input {
   align-items: center;
   justify-content: center;
   font-size: 24px;
+  cursor: pointer;
+}
+.tip__selector-input {
+  width: 117px;
+  height: 48px;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  font-size: 24px;
+  text-align: center;
+  padding: 0 14px;
+}
+.selected {
+  background-color: $Strongcyan;
+  color: $Verydarkcyan;
 }
 
 .tip__results {
@@ -162,11 +183,14 @@ input {
   color: $Verydarkcyan;
   align-self: flex-end;
   margin-bottom: 1px;
+  cursor: pointer;
 }
 .attribution {
-  font-size: 11px;
+  font-size: 12px;
   text-align: center;
+  position: absolute;
+  bottom: 15px;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: $Strongcyan;
 }
